Renamed files to fix issue of images not showing

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -45,7 +45,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url(../img/portrait_small.jpg);
+      background: url(../img/portrait_small.JPG);
       width: 150px;
       height: 150px;
     }
